# jatch

./: Cargo.toml  LICENSE.md  README.md
benches/: example_benchmark.rs
src/: errors.rs  lib.rs  path.rs
src/diff/: diff_vecs.rs  mod.rs
src/patch/: mod.rs  walk.rs
src/patch/apply/: add.rs  copy.rs  mod.rs  move.rs  remove.rs  replace.rs  test.rs
