[package]
name = "jatch"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "example_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1