[package]
name = "jatch"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "Library for performing JSON patching"
homepage = "https://github.com/cameron1024/jatch"
repository = "https://github.com/cameron1024/jatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "example_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
